# RIP

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake-single-platform.yml
etc/: rip.conf
lib/systemd/system/: proto_rip.service
rip/: CMakeLists.txt  common.hpp  interface.cpp  interface.hpp  rip.cpp  rip_config.cpp  rip_config.hpp  rip_packet.cpp  rip_packet.hpp  rip_protocol.hpp  rip_socket.cpp  rip_socket.hpp  route.cpp  route.hpp  system_netlink.cpp  system_netlink.hpp
